	* ICQ offline messages are sent using your specified character
	  set instead of Unicode (Magnus Hult)
	* MSN HTTP method works with proxies using authentication (Bastien Durel)
	* Really fix the bug where buddies show as logged in for 49 thousand days
	* Buddy pounces containing '&' are saved correctly
	* Improved MSN error handling when the servers are unavailable
	* More MSN bug fixes

version 1.1.2 (1/20/2005):
	* MSN 'HTTP Method' fixed (Felipe Contreras)
	* Better handling of MSN's Individuals group and buddy status updates
	  (Felipe Contreras)
	* Fix a crash inviting MSN user to a chat when they're already there
	* AIM SecurID login support
	* Fix configuration of Jabber chat rooms on some servers
	* More MSN bug fixes (Felipe Contreras)
	* Fix queue messages to Docklet when not globally away (Robert McQueen)
	* Fix some leaks
	* The Autopackage now builds both the mozilla-nss and the gnutls
	  ssl plugins, and requires at least one of those libraries.

version 1.1.1 (12/28/2004):
	* Allow SILC authentication via public key if your key is password
	  protected (Michele Baldessari)
	* More MSN bug fixes (Felipe Contreras)
	* Drag-and-drop to conversation window file transfers work again
	* Disable the delete button on pounces that aren't saved yet anyway
	  (Kevin Stange)

version 1.1.0 (12/02/2004):
	New Features:
	* Binary relocable. Gaim will find its files even if it's installed
	  in a location other than the --prefix it was ./configured with.
	  Pass --disable-binreloc to ./configure to disable.
	* IRC now has fallback encodings, and tries harder to display
	  something useful during an encoding error.
	* New MSN protocol icon (Felipe Contreras)

	Bug Fixes:
	* Fix some leaks (Miah Gregory, Felipe Contreras)
	* Fix crashes when removing buddies in certain situations (Andrew Hart)
	* Eliminate MSN switchboard errors (Felipe Contreras)
	* Fix MSN buddy icon synchronization (Felipe Contreras)