@@ -9,6 +9,8 @@ version 1.1.3:
 	* Buddy pounces containing '&' are saved correctly
 	* Improved MSN error handling when the servers are unavailable
 	* More MSN bug fixes
+	* Fix some leaks
+	* Fix "Find" in the log viewer so that it finds in all logs
 
 version 1.1.2 (1/20/2005):
 	* MSN 'HTTP Method' fixed (Felipe Contreras)
